--- a/tables.css
+++ b/tables.css
@@ -2,7 +2,6 @@
 
 body {
   background-color: #224799;
-  position: relative;
   font-family: "Roboto", helvetica, arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -10,7 +9,7 @@ body {
 }
 
 div.table-title {
-   display: block;
+  display: block;
   margin: auto;
   max-width: 600px;
   padding:5px;
@@ -54,7 +53,8 @@ div.table-title {
  
 th {
   color:#fcfcfc;
-  position: fixed;
+  position: sticky;
+  top: 0;
   background:#1b1e24;
   border-bottom:4px solid #9ea7af;
   border-right: 1px solid #343a45;
